# TelegramBOT_Automatically-send-messages

./: .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  run_backend.py  telegram BOT api文档.docx  解读.md  需求.txt
app/: __init__.py  config.py
app/admin/: __init__.py  main.py  views.py
app/bot/: __init__.py  broadcast.py  handlers.py  main.py  rate_limit.py  scheduler.py
app/db/: __init__.py  models.py  session.py
app/db/migrations/: __init__.py
app/services/: __init__.py  templates.py
data/: .gitkeep  append_column.py
examples/: write_pending_message.py
tests/: __init__.py  conftest.py  test_broadcast.py  test_sanity.py  test_templates.py
visualize/: api.py
visualize/frontend/: index.html
